/criar_ciclo agora só cria se estiver finalizado o ciclo anterior, agora temos as rotas /usuarios/agenetes/id e /usuarios/supervisor/id mas falta documentar, criei delete para denuncias, mas falta documentar DELETE e UPDATE, e agora o login retorna o agente_id, supervisor_id e nivel_de_acesso
